src/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT101_YTT101.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind:
    SysVersionSlice3Referenced: ~
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 17
  fix: ~
  parent: ~
- kind:
    SysVersionSlice3Referenced: ~
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 13
  fix: ~
  parent: ~
- kind:
    SysVersionSlice3Referenced: ~
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 7
  fix: ~
  parent: ~

