src/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT102_YTT102.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind: SysVersion2Referenced
  location:
    row: 4
    column: 11
  end_location:
    row: 4
    column: 22
  fix: ~
  parent: ~
- kind: SysVersion2Referenced
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 18
  fix: ~
  parent: ~

