src/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT202_YTT202.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind:
    SixPY3Referenced: ~
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 10
  fix: ~
  parent: ~
- kind:
    SixPY3Referenced: ~
  location:
    row: 6
    column: 3
  end_location:
    row: 6
    column: 6
  fix: ~
  parent: ~

