src/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT203_YTT203.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind: SysVersionInfo1CmpInt
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix: ~
  parent: ~
- kind: SysVersionInfo1CmpInt
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 15
  fix: ~
  parent: ~

